2008-09-14  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 552175 – invalid schemas file

	* gnome-screenshot.schemas.in: Provide default values for
	the take_window_show and delay keys. (Christian Persch)

2008-09-08  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 99897 – Screen Shot to clip board

	* gnome-screenshot.c:
	(screenshot_dialog_response_cb): Allow copying the screenshot
	image to the clipboard. Based on a patch by Vincent Untz.

	* gnome-screenshot.ui: Add the 'Copy to Clipboard' button.

	* screenshot-dialog.[ch]: Allow retrieving the GdkPixbuf
	of the screenshot from the dialog.

2008-08-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* gnome-screenshot.c: (finish_prepare_screenshot),
	(check_file_done), (try_check_file), (find_current_window),
	(prepare_screenshot):
	* screenshot-save.c: (screenshot_sanitize_filename):
	Make guessing screenshot filename from window title work again
	(#549736).

2008-08-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am:
	* gnome-screenshot.c: (main):
	* gnome-screenshot.glade:
	* gnome-screenshot.ui:
	* screenshot-dialog.c: (screenshot_dialog_new),
	(screenshot_dialog_enable_dnd), (screenshot_dialog_get_toplevel):
	* screenshot-dialog.h:
	Drop libglade dependency. Use GtkBuilder instead (#549700).

2008-08-28  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 549667 – crash in shape code

	* screenshot-utils.c (screenshot_get_pixbuf): Check the returned
	value for XShapeGetRectangles(). (Matthias Clasen)

2008-08-25  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am: Leftover from the Gdk port: remove $(XFIXES_LIBS)
	from LDADD.

2008-08-25  Cosimo Cecchi  <cosimoc@gnome.org>

	* screenshot-save.c: (clean_up_temporary_dir),
	(read_pipe_from_child):	Fix some warnings due to missing string
	format placeholders. 

2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	Bug 434580 – gnome-screenshot does not remember user settings

	* gnome-screenshot.c:
	* gnome-screenshot.schemas.in: Save the user settings after